--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.11",
     "@next/font": "13.1.6",
     "@portabletext/react": "^2.0.1",
     "@sanity/image-url": "^1.0.2",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-medium-image-zoom": "^5.1.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
