--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "framer-motion": "^10.0.1",
     "next": "13.1.6",
     "next-sanity": "^4.1.5",
     "react": "18.2.0",
