--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "13.1.6",
     "@portabletext/react": "^2.0.1",
     "@sanity/image-url": "^1.0.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
