--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "framer-motion": "^10.0.1",
+    "ipad-cursor": "^0.5.2",
     "next": "13.1.6",
     "next-sanity": "^4.1.5",
     "react": "18.2.0",
